--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome titles
+title: My awesome site
+tagline: Un travail plus humain et plus riche de sens
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -28,19 +29,6 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  devingfx
-
-# Build settings
-markdown: kramdown
-remote_theme: devingfx/blox-theme-jekyll@tests-on-main
-
-# Plugins (previously gems:)
-plugins:
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-gist
-  - jekyll-feed
-  - jemoji
-  - jekyll-include-cache
 
 author:
   name   : "First Lastname"
@@ -99,6 +87,28 @@ tag_archive:
   type: liquid
   path: /tags/
 
+# Tracking service
+tracking:
+  matomo:
+    trackerUrl: piwik.p2p.legal/
+    siteId: 13
+
+# Build settings
+markdown: kramdown
+remote_theme: devingfx/blox-theme-jekyll@tests-on-main
+
+collections:
+  - subjects
+
+# Plugins (previously gems:)
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
+  - jekyll-include-cache
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
@@ -118,3 +128,18 @@ tag_archive:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+exclude:
+  - .sass-cache/
+  - .jekyll-cache/
+  - gemfiles/
+  - Gemfile
+  - Gemfile.lock
+  - node_modules/
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
+  - README*
+  - index.html
+
+
